fix: update styles for sections view on mobile

--- a/practices/practice-two/src/assets/stylesheets/sections/_hero-banner.scss
+++ b/practices/practice-two/src/assets/stylesheets/sections/_hero-banner.scss
@@ -44,14 +44,26 @@
     }
 
     &-image {
-      margin: -30px -12px 0 0;
+      margin-top: 60px;
+      margin-right: -12px;
       
       @include only-for-tablet() {
         position: absolute;
         top: 0;
         right: 0;
-        margin: 20px 0 0;
+        margin-top: 20px;
+        margin-right: 0;
         text-align: right;
+      }
+    }
+
+    .text-md {
+      margin: 12px auto;
+      max-width: 70%;
+      
+      @include only-for-tablet() {
+        margin: 28px 0;
+        max-width: 100%;
       }
     }
 
@@ -123,10 +135,11 @@
     &-content {
       @extend %text-center;
       color: $color-secondary;
-      width: 100%;
+      padding: 0 30px;
       
       @include only-for-tablet() {
         text-align: left;
+        padding: 0;
         width: 40%;
       }
       
